// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileBasic component should render with correct profile details 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa QZupl"
    style="opacity: 0.2; transform: translateX(30px) translateZ(0);"
  >
    <img
      alt="The profile picture for Nella Aalto"
      class="thumbnail"
      src="https://randomuser.me/api/portraits/thumb/women/55.jpg"
    />
    <p>
      Nella Aalto
    </p>
    <img
      alt="An arrow pointing right enclosed inside a circle"
      class="arrow"
      src="/static/icons/circle-arrow.svg"
    />
  </div>
</DocumentFragment>
`;

exports[`ProfileBasic component should render with skeleton elements if no profile data is provided 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa QZupl"
    style="opacity: 0.2; transform: translateX(30px) translateZ(0);"
  >
    <div
      class="thumbnail skeleton skeleton-thumbnail"
      data-testid="skeleton"
    />
    <div
      class="skeleton skeleton-name"
    />
  </div>
</DocumentFragment>
`;

exports[`ProfileBasic component should render with skeleton elements if no profile name is provided 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa QZupl"
    style="opacity: 0.2; transform: translateX(30px) translateZ(0);"
  >
    <div
      class="thumbnail skeleton skeleton-thumbnail"
      data-testid="skeleton"
    />
    <div
      class="skeleton skeleton-name"
    />
  </div>
</DocumentFragment>
`;

exports[`ProfileBasic component should render with skeleton elements if no profile picture is provided 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa QZupl"
    style="opacity: 0.2; transform: translateX(30px) translateZ(0);"
  >
    <div
      class="thumbnail skeleton skeleton-thumbnail"
      data-testid="skeleton"
    />
    <div
      class="skeleton skeleton-name"
    />
  </div>
</DocumentFragment>
`;
